--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
-
-	height:100%;
+  
+    height:100%;
 	margin:0;
 	background-color:#4666a8;
 }
@@ -14,6 +14,9 @@ header{
 	width:100%;
 	border-bottom:solid white 1px;
 }
+
+
+
 
 #pseudo{
     background-color:#c3cee5;
@@ -38,8 +41,8 @@ header{
 }
 
 .square{
-	float:right;
-	background-color:#c3cee5;
+    display: inline-flex;
+    background-color:#c3cee5;
 	height:30px;
 	width:30px;
 	border-radius:50%;
@@ -47,11 +50,12 @@ header{
 }
 
 nav{
-	float:left;
+	display: flex;
+    flex-direction: column;
 	margin-left: -10px;
 }
 ul.menu{
-	margin-top:30%;
+	margin-top:10px;
 	margin-bottom: 50px;
 
 
@@ -86,13 +90,19 @@ span.picture{
 
 
 section{
-    float: left;
+    display: flex;
+    flex-direction: column;
 	margin-top:20px;
 	margin-left:28px;
     
 
 }
 
+
+#flex{
+	display: flex;
+	flex-direction: row;
+}
 
 #comment{
      
@@ -211,16 +221,22 @@ aside>.block1{
     border-radius: 5px;
 }
 
+#right{
+	display: flex;
+	flex-direction: column;
+	margin-left:30px;
+}
+
 #right1{
 
-	float:right;
+
 	height: 430px;
 	width:280px;
     border-left:1px solid white;
 }
 
 #right2{
-    float:right;
+    
 	height: 500px;
 	width:280px;
 	border-top:1px solid white;
